--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".LoginActivity"/>
         <activity android:name=".RecuperarActivity"/>
         <activity android:name=".RegistroActivity"/>
+        <activity android:name=".HomeActivity"/>
 
     </application>
 
