--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,6 +17,9 @@
         android:theme="@style/Theme.PlanProPropio"
         tools:targetApi="31">
         <activity
+            android:name=".UsuarioActivity"
+            android:exported="true" />
+        <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
@@ -21,11 +28,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CargaActivity"/>
-        <activity android:name=".RecuperarActivity"/>
-        <activity android:name=".RegistroActivity"/>
-        <activity android:name=".HomeActivity"/>
+        <activity
+            android:name=".CargaActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".RecuperarActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".RegistroActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false"/>
 
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
