--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.PlanProPropio"
         tools:targetApi="31">
         <activity
+            android:name=".AgregarNotasActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
@@ -21,11 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CargaActivity"/>
-        <activity android:name=".RecuperarActivity"/>
-        <activity android:name=".RegistroActivity"/>
-        <activity android:name=".HomeActivity"/>
-
+        <activity android:name=".CargaActivity" />
+        <activity android:name=".RecuperarActivity" />
+        <activity android:name=".RegistroActivity" />
+        <activity android:name=".HomeActivity" />
     </application>
 
 </manifest>
