--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,11 +17,20 @@
         android:theme="@style/Theme.PlanProPropio"
         tools:targetApi="31">
         <activity
+            android:name=".EditarNota"
+            android:exported="false" />
+        <activity
+            android:name=".ListaNotasNoFinalizadas"
+            android:exported="true" />
+        <activity
+            android:name=".ListaNotasFinalizadas"
+            android:exported="true" />
+        <activity
             android:name=".UsuarioActivity"
             android:exported="true" />
         <activity
             android:name=".AgregarNotasActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
