--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
         tools:targetApi="31"
         android:windowSoftInputMode="adjustPan">
         <activity
-            android:name=".EditarNota"
-            android:exported="false" />
+            android:name=".EditarNotaActivity"
+            android:exported="true" />
         <activity
             android:name=".ListaNotasNoFinalizadas"
             android:exported="true" />
