--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
         <activity android:name=".RecuperarActivity" />
         <activity android:name=".RegistroActivity" />
         <activity android:name=".HomeActivity" />
+        <activity android:name=".Habitos" />
+        <activity android:name=".Crearhabitos" />
     </application>
 
 </manifest>
